--- a/src/_layouts/chapter.njk
+++ b/src/_layouts/chapter.njk
@@ -3,7 +3,7 @@ layout: base.njk
 ---
 
 <div class="back-nav">
-    <a href="/">← Back to All Chapters</a>
+    <a href="{{ '/' | url }}">← Back to All Chapters</a>
 </div>
 
 <div class="chapter-content">
